# k8s_devops

./: .gitignore  README.md  UV_guide.md
car-fleet-api/: .gitignore  ARCHITECTURE_SUMMARY.md  Dockerfile  JSON_PERSISTENCE.md  README.md  app.py  pyproject.toml  swagger.yaml
car-fleet-api/data/: cars.json.example
car-fleet-api/infra/k8s-manifests/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
car-fleet-api/src/: __init__.py  agency.py  car.py  controller.py  service.py
k8s-tests-project/: .gitignore  README.md  configs.yml  conftest.py  nginx-healthcheck.yaml  pyproject.toml  test_k8s_e2e.py
k8s-tests-project/tests/: __init__.py  test_cleanup.py  test_cluster.py  test_health.py  test_liveness.py  test_pod.py
k8s_and_gitops/: 01-RKE2-INSTALLATION.md  02-ARGOCD-INSTALLATION.md  03-DEPLOY-APPLICATION.md  04-EXPOSE-APPLICATION.md  05-RECONCILIATION-TESTING.md  CHECKLIST.md  GETTING-STARTED.md  PROJECT-SUMMARY.md  QUICK-REFERENCE.md  README.md  install.sh
k8s_and_gitops/manifests/: argocd-application.yaml  argocd-ingress.yaml  online-boutique-ingress.yaml
