[project]
name = "car-fleet-api"
version = "0.1.0"
description = "Car Fleet Management API with Flask backend"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-swagger-ui>=5.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["car_fleet"]
